--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.17.2",
     "zustand": "^5.0.3"
   },
