Corrected the mongoDB connection error and created database schema models

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI = mongodb+srv://myAtlasDBUser:batch_buddy@batch-buddy.ei7he.mongodb.net/?retryWrites=true&w=majority&appName=Batch-Buddy
-PORT = 3000
+MONGO_URI=mongodb+srv://myAtlasDBUser:batchbuddy123@batch-buddy.ei7he.mongodb.net/?retryWrites=true&w=majority
+PORT=5000
+
