--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.8",
     "framer-motion": "^11.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.0",
     "lucide-react": "^0.503.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
