--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.8",
+    "dompurify": "^3.2.5",
     "framer-motion": "^11.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.0",
