--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://myAtlasDBUser:batchbuddy123@batch-buddy.ei7he.mongodb.net/
 PORT=5000
+VITE_VAPID_PUBLIC_KEY=BN4d8LvezctXQOfWbgiJaDuR4lP5nD5N1uV-fjXb7DPtJ7SW9ZQJmKrp0scu8oQwj7QhkNq2q2C5Ld6fd2Vx1F8
+VITE_API_URL=http://localhost:5000
