--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "mongoose": "^7.8.6"
+    "moment": "^2.30.1",
+    "mongoose": "^7.8.6",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.1",
+    "react-toastify": "^11.0.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
