--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "moment": "^2.30.1",
-    "mongoose": "^8.12.2"
+    "mongoose": "^8.12.2",
+    "multer": "^1.4.5-lts.2",
+    "pdfkit": "^0.17.0",
+    "quickchart-js": "^3.1.3",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
