--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.6.1",
     "nodemailer": "^6.10.1"
