--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "chart.js": "^4.4.8",
     "dompurify": "^3.2.5",
     "framer-motion": "^11.0.5",
-    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.7.0",
     "lucide-react": "^0.503.0",
     "react": "^18.2.0",
