--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://myAtlasDBUser:batchbuddy123@batch-buddy.ei7he.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
+GEMINI_API_KEY=AIzaSyCdUWR4ikUlImmQrHBJs7JhoDwt2OG915c
 
