--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.0",
     "quickchart-js": "^3.1.3",
+    "socket.io": "^4.8.1",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
