--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^6.22.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "zustand": "^5.0.3"
   },
